--- a/web/templates/css/collection.css
+++ b/web/templates/css/collection.css
@@ -1,3 +1,14 @@
-.item-button{
-    margin: auto 10px;
+.collection-item{
+    border-bottom: solid 1px #e3e4e5;
+    border-top: solid 1px #e3e4e5;
+    padding: 10px auto;
+}
+.collection-header{
+    border-bottom: solid 1px #e3e4e5;
+}
+.collection-img{
+    width: 100%;
+}
+.item-img-body{
+    margin: 10px auto;
 }
